Fixed layout issues for reviews graphs

--- a/website/static/css/feedback.css
+++ b/website/static/css/feedback.css
@@ -1,31 +1,23 @@
 .content {
-    overflow-x: hidden;
 }
 
 /* Widgets placeholders CSS */
 .feedback {
-    margin-right: 15%;
-    margin-top: 5%;
-    height: 100vh;
-    width: 100vw;
     display: flex;
     flex-direction: column;
-    align-items: left;
-    position: relative;
+    justify-content: center;
+    align-items: center;
 }
 
 .feedback-stats {
     display: flex;
     flex-direction: row;
-    align-items: left;
 }
 
 .feedback-card {
     border: 2px solid black;
     width: 150px;
     height: 50px;
-    position: relative;
-    left: 10%;
     cursor: pointer;
     background: var(--bg-primary);
     color: rgb(0, 0, 0);
@@ -74,62 +66,30 @@
 .feedback-img img {
     width: auto;
     height: 30px;
-    /* margin-left: 30px; */
 }
 
 /* Graph placeholders CSS */
 .feedback-visuals {
     height: 70vh;
-    position: relative;
-    left: 10%;
-    display: flex;
-    flex-direction: row;
+    display: grid;
+    grid-template-columns: 25vw 25vw;
+    column-gap: 20px;
+    /* width: 100%; */
 }
 
-.daily_cust {
-    border: 2px solid black;
-    width: 50vw;
-    height: 60vh;
-    position: relative;
-    padding: 12px 40px;
-    font-family: 'Sans-Regular';
-    cursor: pointer;
+.graph_container {
     background: var(--bg-primary);
-    color: rgb(0, 0, 0);
-    letter-spacing: 0.2px;
-    font-size: x-large;
-    outline: 0;
-    -webkit-transition: all .6s;
-    transition: all .6s;
+    border: 2px solid black;
     border-radius: 15px;
     box-shadow: 3px 3px 3px rgb(187, 187, 187);
-    margin: 15px 25px ;
-    margin-right: 10px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-}
-
-.popular_dishes {
-    border: 2px solid black;
-    width: 25vw;
-    height: 60vh;
-    position: relative;
-    padding: 12px 40px;
-    cursor: pointer;
-    background: var(--bg-primary);
-    color: rgb(0, 0, 0);
-    letter-spacing: 0.2px;
-    outline: 0;
-    -webkit-transition: all .6s;
-    transition: all .6s;
-    border-radius: 15px;
-    box-shadow: 3px 3px 3px rgb(187, 187, 187);
-    margin: 15px 25px ;
-    margin-right: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 12px 40px;
+    color: rgb(0, 0, 0);
+    letter-spacing: 0.2px;
+    -webkit-transition: all .6s;
+    transition: all .6s;
 }
 
 .graph_header {
@@ -141,7 +101,7 @@
     justify-content: center;
 }
 
-.chart {
+.graph {
     display: flex;
     width: 100%;
     height: 100%;
@@ -155,10 +115,10 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    margin-left: 13%;
-    max-width:fit-content;
+    max-width: fit-content;
     position: relative;
     overflow: hidden;
+    transform: translateY(40px);
 }
 
 .scrollmsg {
